--- a/index.css
+++ b/index.css
@@ -1,5 +1,12 @@
 
-
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    
+  }
+  
   li {
     float: left;
     padding: 20px;
