--- a/index.css
+++ b/index.css
@@ -64,6 +64,12 @@ ul {
   .grin{
       text-align: center;
   }
+  .con{
+      text-align: center;
+      height: 300px;
+      background-color: #FFD77C;
+      padding-top: 200px;
+  }
   input{
       width:400px;
       border-style: hidden;
