created explore menu part

--- a/index.css
+++ b/index.css
@@ -27,7 +27,15 @@ ul {
    .container{
       background-color: #D1D0CE;
   }
-  
+  button{
+      background-color: #6CB840;
+      height: 50px;
+      width: 200px;
+      border-radius: 20px;
+      border-color: #6CB840;
+      border-style: hidden;
+      font-family: Poppins;
+  }
   .about{
       display: flex;
   }
